--- a/css/style.css
+++ b/css/style.css
@@ -368,4 +368,145 @@ body {
     color: var(--white);
 }
 
+/* ---- COMMENT ---- */
+
+.comment {
+    background: var(--grey);
+    padding: 4rem 6rem;
+}
+
+.comment .container-comment {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+/* ---- COMMENT text title---- */
+
+.comment .container-comment .content-title {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 2rem;
+}
+
+.comment .container-comment .content-title h2 {
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+
+.comment .container-comment .content-title p {
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+/* ---- COMMENT content items ---- */
+
+.comment .content-items {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 3.2rem;
+}
+
+.comment .content-items .item-comment {
+    border-radius: 25px;
+    border: 1px solid transparent;
+    height: 480px;
+    width: 350px;
+    background: var(--grey-line);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 2rem;
+    gap: 1.5rem;
+}
+
+.comment .content-items .item-comment img {
+    height: 100px;
+    border-radius: 100%;
+}
+
+.comment .content-items .item-comment .stars{
+    display: flex;
+    justify-content: center;
+    font-size: 1.2rem;
+    gap: 0.6rem;
+    
+}
+
+.comment .content-items .item-comment .stars i{
+    color: yellow;
+}
+
+.comment .content-items .item-comment p {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+/* ---- GET STARTED ---- */
+
+.get-started {
+    background: var(--orange);
+    padding: 3rem 6rem;
+}
+
+.get-started .container-started {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 2rem;
+}
+
+.get-started .container-started h2 {
+    font-size: 2rem;
+    font-weight: 800;
+    color: var(--black);
+}
+
+.get-started .container-started p {
+    font-weight: 600;
+    color: var(--black);
+}
+
+.get-started .container-started .stickers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.get-started .container-started .stickers img {
+    width: 220px;
+    height: 70px;
+    border-radius: 15px;
+}
+
+/* ---- FOOTER  ---- */
+
+.footer {
+    background: var(--black);
+    padding: 2rem;
+}
+
+.footer .container-footer {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer .container-footer .last-menu,
+.footer .container-footer .rrss {
+    display: flex;
+    gap: 0.5rem;
+}
+
+
+
+
+
 
